spacing--fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root{
+:root {
   font-size: 16px;
 }
 
@@ -194,5 +194,5 @@ option:first-child {
 .nav-link3.active li {
   font-weight: 600;
   color: #000000;
-  font-size: 0.875em;
+  font-size: 0.975em;
 }
